media/css/zamboni/editors.css
.site-title {
    padding-top: 27px;
    max-width: 530px;
}
.site-title a,
.site-title a:visited,
.site-title a:hover,
.site-title a:focus {
    font-size: 40px;
}
/* sprites for data grid icons */

.app-icon {
    float: left;
    margin-right: 4px;
    background: url(../../img/developers/editors-sprite.png) no-repeat top left;
    width: 16px; height: 16px;
}
.ed-sprite-admin-review { background-position: 0 0; }
.ed-sprite-firefox { background-position: 0 -66px; }
.ed-sprite-mobile { background-position: 0 -132px; }
.ed-sprite-mz { background-position: 0 -198px; }
.ed-sprite-mozilla { background-position: 0 -198px; }
.ed-sprite-seamonkey { background-position: 0 -264px; }
.ed-sprite-sunbird { background-position: 0 -497px; }
.ed-sprite-thunderbird { background-position: 0 -563px; }
.sort-icon {
    background: url(../../img/developers/editors-sprite.png) no-repeat top left;
}
.ed-sprite-sort-asc {
    background-position: right -321px;
}
.ed-sprite-sort-both {
    background-position: right -378px;
}
.ed-sprite-sort-desc {
    background-position: right -435px;
}
/* data grids on queue pages */
.data-grid-top {
    border-bottom: 1px solid #A5BFCE;
}
.data-grid-bottom {
    border-top: 1px solid #A5BFCE;
}
.data-grid-content {
    padding: 0.5em;
}
.data-grid-content:after {
    content: ".";
    display: block;
    clear: both;
    height: 0;
    visibility: hidden;
}
.data-grid-content ol.pagination {
    margin: 0;
}
.queue-outer {
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border-radius: 5px;
    border: 4px solid #E0EFFD;
    margin-bottom: 2em;
}
.queue-inner {
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    border-radius: 3px;
    background-color: #FFFFFF;
    border: 1px solid #2E5186;
}
.queue-outer .no-results {
    margin: 0;
    padding: 6em 1em;
    font-size: 1.1em;
}
table.data-grid {
    width: 100%;
    margin-bottom: 0;
}
table.data-grid thead tr th:nth-child(2) {
    min-width: 7em;
}
table.data-grid thead tr th:nth-child(3) {
    min-width: 8em;
}
table.data-grid thead tr th:nth-child(4) {
    min-width: 5em;
}
table.data-grid thead tr th:nth-child(5) {
    min-width: 8em;
}
table.data-grid thead tr th:nth-child(6) {
    min-width: 13em;
}
table.data-grid tr th a:active,
table.data-grid tr th a:hover,
table.data-grid tr th a:visited {
    color: #3D6DB5;
}
table.data-grid tr th.ordered {
    background: -webkit-gradient(
        linear,
        left bottom,
        left top,
        from(#FFFFFF),
        to(#BCE0FF)
    );
    background: -moz-linear-gradient(#FFFFFF, #BCE0FF);
}
table.data-grid tr th.ordered a {
    color: #153A72;
}
table.data-grid tr th.ordered a:active,
table.data-grid tr th.ordered a:hover,
table.data-grid tr th.ordered a:visited {
    color: #003595;
}
table.data-grid tr th, table.data-grid tr td {
    padding: 0.5em;
}
table.data-grid tr th a {
    display: block;
}
table.data-grid tr td {
    border-top: 1px dotted #DDDDDD;
}
table.data-grid tbody tr:nth-child(odd) {
    background-color: #FAFAFA;
}
table.data-grid tbody tr:nth-child(even) {
    background-color: #FFFFFF;
}

/* editors/queue tabs */
ul.tabnav {
    list-style-type: none;
    text-align: left;
    margin-bottom: 0;
    padding: 5px 14px;
}
.html-rtl ul.tabnav {
    text-align: right;
}
ul.tabnav li {
    display: inline;
    position: relative;
    top: 2px;
    margin: 0px 4px;
}
ul.tabnav li a {
    font-weight: bold;
    text-decoration: none;
    color: #223355;
    background-color: #E0EFFD;
    padding: 5px 10px;
    border: 1px solid transparent;
    border-bottom: none;
    -moz-border-radius-topleft:5px;
    -moz-border-radius-topright:5px;
    -webkit-border-top-left-radius: 5px;
    -webkit-border-top-right-radius: 5px;
}
ul.tabnav li.selected a {
    background-color: #ffffff;
    border-color: #2E5186;
    padding-bottom: 10px;
}
ul.tabnav a:hover {
    background-color: #C9E5FC;
    border-color: #BCE0FF;
    padding-bottom: 9px;
}

#editors_main .listing .results-inner {
    padding: 0 0.5em;
}

#editors_main .listing time {
    color: #aaa;
    font-style: italic;
}

#editors_main .listing .row {
    padding: 0.5em;
    border-top: 1px dotted #ADD0DC;
}

#editors_main .listing .row:first-child {
    border-top-width: 0px;
}

.editor-stats-title,
.editor-stats-table {
    width: 33%;
    float: left;
}

.editor-stats-title span {
    font-weight: bold;
    padding-left: 7px;
}

.editor-stats-table > div {
    padding: 0 10px;
    margin: 5px 0;
    border-left: 1px dotted #ADD0DC;
}

.editor-stats-table:first-child > div {
    border-left-width: 0px;
}

.editor-stats-table table {
    width: 100%;
    margin: 0;
}

.editor-stats-table td, .editor-stats-table th {
    padding: 0;
    border-top: 1px solid #F0F7FE;
}

.editor-stats-table table tr:first-child td {
    border-top-width: 0px;
}

.editor-stats-table .int {
    text-align: right;
    color: #37A632;
    font-weight: bold;
}

.editor-stats-table .date {
    text-align: right;
    color: #999;
    font-style: italic;
}

.listing-header {
    line-height: 1.8em;
}

.daily-message {
    position: relative;
}

.daily-message div {
    padding: 15px;
}

.daily-message .close {
    background-color: #DDDDDD;
    -moz-border-radius: 15px;
    -webkit-border-radius: 15px;
    border-radius: 15px;
    color: #FFFFFF;
    font-weight: bold;
    height: 15px;
    line-height: 12px;
    position: absolute;
    right: 5px;
    text-align: center;
    top: 5px;
    width: 15px;
    text-decoration: none;
    display: none;
}

.daily-message .close:hover {
    background-color: #CCC;
    text-decoration: none;
}

.daily-message p {
    margin: 0;
}

.daily-message h2 {
    font-size: 1em;
    font-weight: bold;
    margin-top: 0;
}

.controls {
    padding: 15px;
}

tr.comments {
    background: #def;
}

/* Moderated reviews css */

#reviews-flagged .review-flagged {
    border-top: 1px dotted #CCCCCC;
    padding: 1em;
    margin: 0 0 1em 1em;
}

#reviews-flagged .review-flagged ul {
    margin-bottom: 0;
}

#reviews-flagged .review-flagged:first-child {
    border-top: 0;
}

#reviews-flagged .reviews-flagged-reasons {
    background-color: #FFE4E4;
    border-radius: 10px;
    margin: 0;
    padding: 0 10px;
    clear: both;
}

#reviews-flagged .reviews-flagged-reasons li {
    padding: 10px 0;
    border-top: 1px dotted #FFB1B1;
}

#reviews-flagged .reviews-flagged-reasons li:first-child {
    border-top: 0;
}

#reviews-flagged h3 {
    margin: 0;
}

#reviews-flagged .review-flagged-actions {
    float: right;
    padding-left: 10px;
    margin-left: 10px;
    border-left: 1px dashed #ccc;
    width: 200px;
}

#reviews-flagged .review-flagged-actions label {
    font-weight: normal;
}

#reviews-flagged form {
    margin: 0;
}

#reviews-flagged div.review-saved {
    padding: 10px;
    text-align: right;
    margin-bottom: 0;
}

#reviews-flagged label[for$=action_0] {
    color: #429341;
}

#reviews-flagged label[for$=action_1] {
    color: #4D80C6;
}

#reviews-flagged label[for$=action_2] {
    color: #9A2E2E;
}

/* data grid search form */
.queue-outer #queue-search table {
    margin: 0;
    padding: 0;
}
.queue-outer #queue-search {
    padding: 1em;
}
#advanced-search {
    display: none;
    margin-top: 1em;
}
#advanced-search .column1 {
    float: left;
    width: 375px;
}
#advanced-search .column1 label {
    display: block;
    float: left;
    width: 13em;
}
#advanced-search .form-elem {
    margin-bottom: 0.5em;
}
#advanced-search .column2,
#advanced-search .column3 {
    float: left;
    width: 250px;
}
#advanced-search .column2 label,
#advanced-search .column3 label {
    display: block;
}
#advanced-search .form-row {
    clear: both;
    padding-bottom: 1em;
}
#advanced-search .column3:after {
    content: ".";
    display: block;
    clear: both;
    height: 0;
    visibility: hidden;
}
#id_text_query {
    width: 25em;
    height: 1.5em;
}

/* Review Page */

#review-actions-form textarea,
#review-actions-form input[type=text],
#review-actions-form select {
    border: 1px solid #AFBDD3;
}

#review-actions-form textarea {
    height: 100px;
}

#review-actions-form .review-actions-desc {
    text-align: center;
}

#review-actions-form {
    padding: 10px;
    display: none;
}

.review-actions {
    margin: auto;
    border: 3px solid #E0EFFD;
    -moz-border-radius: 7px;
    -webkit-border-radius: 7px;
    border-radius: 7px;
}

.review-actions #review-actions-form {
    display: none;
}

.review-actions .action_nav ul {
    margin: 0;
    display: table;
    width: 100%;
}

.review-actions .action_nav li {
    background-color: #E0EFFD;
    background: -moz-linear-gradient(#FFFFFF, #E0EFFD) repeat scroll 0 0 transparent;
    display: table-cell;
    text-align: center;
}

.review-actions .action_nav li:active {
    background-color: #FFF;
    background: -moz-linear-gradient(#E0EFFD, #FFF) repeat scroll 0 0 transparent;
}

.review-actions .action_nav li input {
    display: none;
}

.review-actions .action_nav li label {
    display: block;
    padding: 5px;
}

.review-actions .action_nav li {
    text-shadow: 1px 1px 0 #FFFFFF;
    border-top: 1px solid #2E5186;
    border-bottom: 1px solid #2E5186;
    border-right: 1px solid #A5BFCE;
}

.review-actions .action_nav li:first-child {
    border-left: 1px solid #2E5186;
    -moz-border-radius: 5px 0 0 5px;
    -webkit-border-radius: 5px 0 0 5px;
    border-radius: 5px 0 0 5px;
}

.review-actions .action_nav li:last-child {
    border-right: 1px solid #2E5186;
    -moz-border-radius: 0 5px 5px 0;
    -webkit-border-radius: 0 5px 5px 0;
    border-radius: 0 5px 5px 0;
}

.review-actions.on .action_nav ul li.on-tab {
    background: #fff;
    border-bottom: none;
}

.review-actions.on #review-actions-form {
    border: 0px solid #2E5186;
    border-width: 0 1px 1px 1px;
    -moz-border-radius: 0 0 5px 5px;
    -webkit-border-radius: 0 0 5px 5px;
    border-radius: 0 0 5px 5px;
}

.review-actions.on .action_nav li:first-child {
    -moz-border-radius: 5px 0 0;
    -webkit-border-radius: 5px 0 0;
    border-radius: 5px 0 0;
}

.review-actions.on .action_nav li:last-child {
    -moz-border-radius: 0 5px 0 0;
    -webkit-border-radius: 0 5px 0 0;
    border-radius: 0 5px 0 0;
}

.review-actions.on .action_nav li {
    border-bottom: 1px solid #A5BFCE;
}

.review-actions-canned {
    text-align: right;
}

.review-actions-canned select {
    padding: 0;
}

.review-actions-section {
    border-top: 1px dotted #ccc;
    margin-top: 1em;
    padding-top: 1em;
}
.review-actions-tested label {
    margin-left: 25px;
    margin-right: 10px;
}

.review-actions-save {
    text-align: right;
}

.review-actions-section label {
    font-weight: normal;
}

.review-paging {
    border-bottom: 1px dotted #ccc;
    margin-bottom: 2em;
    padding-bottom: 1em;
}

#editor-motd textarea {
    height: 5em;
    margin-bottom: 0.5em;
}

#editor-motd .buttons {
    text-align: right;
}

