Content is too close to the border in log details page (bug 640249)

--- a/media/css/zamboni/editors.css
+++ b/media/css/zamboni/editors.css
@@ -284,6 +284,10 @@ ul.tabnav a:hover {
     margin-top: 0;
 }
 
+.featured-inner-padded {
+    padding: 15px;
+}
+
 .controls {
     padding: 15px;
 }
